<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shams.maor.task_manager_sharedpreferences.SignActivity">


    <EditText
        android:id="@+id/sign_editUserName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_con"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        android:paddingLeft="15dp"
        android:visibility="gone"

        />

    <EditText
        android:id="@+id/sign_editEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_con"
        android:digits="abcdefghijklmnopqrstuvwxyz0123456789.-_$*()#@!%/"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:textAlignment="textStart" />

    <EditText
        android:id="@+id/sign_editPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="19dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_con"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp" />

    <TextView
        android:id="@+id/sign_passHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/pass_hint"
        android:visibility="gone" />

    <Button
        android:id="@+id/sign_loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:onClick="onClickSignIn"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/sign_RegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_weight="1"
        android:onClick="onClickRegister"
        android:text="@string/register"
        android:visibility="gone" />


    <TextView
        android:id="@+id/sign_notRegistered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_weight="10"
        android:onClick="onClickNotRegistered"
        android:text="@string/not_a_member_sign_up_now"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/sign_alreadyRegistered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_weight="10"
        android:textSize="20sp"
        android:onClick="onClickAlreadyRegistered"
        android:text="@string/already_registered_login_here"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:visibility="invisible" />
</LinearLayout>
